# src/swagger/property-routes.yaml
@@ -6,7 +6,7 @@ info:
   version: 1.0.0
 
 paths:
-  /api/properties:
+  /api/v1/property:
     get:
       tags:
         - Properties
@@ -97,7 +97,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
   
-  /api/properties/{id}:
+  /api/v1/property/{id}:
     get:
       tags:
         - Properties
@@ -232,7 +232,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /api/properties/{id}/images:
+  /api/v1/property/{id}/images:
     post:
       tags:
         - Properties
@@ -301,7 +301,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
   
-  /api/upload:
+  /api/v1/upload:
     post:
       tags:
         - Upload
@@ -350,7 +350,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
   
-  /api/upload-multiple:
+  /api/v1/upload-multiple:
     post:
       tags:
         - Upload
